src/objects/PCLC__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>aPCL_C</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCLC_Avoid_activities_or_situations__c</fullName>
        <inlineHelpText>Avoid activities or situations because they remind
you of a stressful experience from the past?</inlineHelpText>
        <label>Avoid activities or situations?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Avoid_thinking_about_the_past__c</fullName>
        <inlineHelpText>Avoid thinking about or talking about a stressful
experience from the past or avoid having feelings
related to it?</inlineHelpText>
        <label>Avoid thinking about the past?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Being_super_alert_or_watchful__c</fullName>
        <inlineHelpText>Being “super alert” or watchful on guard?</inlineHelpText>
        <label>Being super alert or watchful?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Disturbing_dreams__c</fullName>
        <inlineHelpText>Repeated, disturbing dreams of a stressful
experience from the past?</inlineHelpText>
        <label>Disturbing_dreams__c</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Disturbing_memories_thoughts__c</fullName>
        <description>Repeated, disturbing memories, thoughts, or images
of a stressful experience from the past?</description>
        <label>Disturbing memories, thoughts or images?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_distant_or_cut_off__c</fullName>
        <description>Feeling distant or cut off from other people?</description>
        <label>Feeling distant or cut off?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_emotionally_numb__c</fullName>
        <inlineHelpText>Feeling emotionally numb or being unable to have
loving feelings for those close to you?</inlineHelpText>
        <label>Feeling emotionally numb?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_irritable__c</fullName>
        <inlineHelpText>Feeling irritable or having angry outbursts?</inlineHelpText>
        <label>Feeling irritable?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Feeling_jumpy_or_easily_startled__c</fullName>
        <inlineHelpText>Feeling jumpy or easily startled?</inlineHelpText>
        <label>Feeling jumpy or easily startled?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Future_cut_short__c</fullName>
        <inlineHelpText>Feeling as if your future will somehow be cut short?</inlineHelpText>
        <label>Future cut short?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Having_difficulty_concentrating__c</fullName>
        <inlineHelpText>Having difficulty concentrating?</inlineHelpText>
        <label>Having difficulty concentrating?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Having_physical_reactions__c</fullName>
        <inlineHelpText>Having physical reactions (e.g., heart pounding, trouble breathing, or sweating) when something reminded you of a stressful experience from the past?</inlineHelpText>
        <label>Having physical reactions?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Loss_of_interest__c</fullName>
        <inlineHelpText>Loss of interest in things that you used to enjoy?</inlineHelpText>
        <label>Loss of interest?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Reliving_a_stressful_experience__c</fullName>
        <inlineHelpText>Suddenly acting or feeling as if a stressful experience
were happening again (as if you were reliving it)?</inlineHelpText>
        <label>Reliving a stressful experience?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Trouble_falling_or_staying_asleep__c</fullName>
        <inlineHelpText>Trouble falling or staying asleep?</inlineHelpText>
        <label>Trouble falling or staying asleep?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Trouble_remembering__c</fullName>
        <inlineHelpText>Trouble remembering important parts of a stressful
experience from the past?</inlineHelpText>
        <label>Trouble remembering?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCLC_Upset_when_reminded_of_the_past__c</fullName>
        <inlineHelpText>Feeling very upset when something reminded you of
a stressful experience from the past?</inlineHelpText>
        <label>Upset when reminded of the past?</label>
        <picklist>
            <picklistValues>
                <fullName>Not at all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A little bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderately</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite a bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extremely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>aPCLC</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>aPCLC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>aPCLC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>